@@ -19,12 +19,11 @@
 package org.apache.maven.plugin.compiler;
 
 import javax.lang.model.SourceVersion;
+import javax.tools.DiagnosticListener;
 import javax.tools.JavaCompiler;
 import javax.tools.JavaFileManager;
 import javax.tools.JavaFileObject;
 import javax.tools.OptionChecker;
-import javax.tools.StandardJavaFileManager;
-import javax.tools.StandardLocation;
 import javax.tools.Tool;
 import javax.tools.ToolProvider;
 
@@ -37,15 +36,11 @@ import java.io.StringWriter;
 import java.io.UncheckedIOException;
 import java.nio.charset.Charset;
 import java.nio.charset.UnsupportedCharsetException;
-import java.nio.file.DirectoryNotEmptyException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.EnumSet;
-import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.ServiceLoader;
@@ -54,13 +49,16 @@ import java.util.StringJoiner;
 import java.util.jar.Attributes;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
+import java.util.stream.Stream;
 
 import org.apache.maven.api.JavaPathType;
+import org.apache.maven.api.Language;
 import org.apache.maven.api.PathScope;
 import org.apache.maven.api.PathType;
 import org.apache.maven.api.Project;
 import org.apache.maven.api.ProjectScope;
 import org.apache.maven.api.Session;
+import org.apache.maven.api.SourceRoot;
 import org.apache.maven.api.Toolchain;
 import org.apache.maven.api.Type;
 import org.apache.maven.api.annotations.Nonnull;
@@ -87,6 +85,12 @@ import static org.apache.maven.plugin.compiler.SourceDirectory.MODULE_INFO;
  * This plugin uses the {@link JavaCompiler} interface from JDK 6+.
  * Each instance shall be used only once, then discarded.
  *
+ * <h2>Thread-safety</h2>
+ * This class is not thread-safe. If this class is used in a multi-thread context,
+ * users are responsible for synchronizing all accesses to this <abbr>MOJO</abbr> instance.
+ * However, the executor returned by {@link #createExecutor(DiagnosticListener)} can safely
+ * launch the compilation in a background thread.
+ *
  * @author <a href="mailto:trygvis@inamo.no">Trygve Laugstøl</a>
  * @author Martin Desruisseaux
  * @since 2.0
@@ -103,13 +107,6 @@ public abstract class AbstractCompilerMojo implements Mojo {
      * The executable to use by default if nine is specified.
      */
     private static final String DEFAULT_EXECUTABLE = "javac";
-
-    /**
-     * The locale for diagnostics, or {@code null} for the platform default.
-     *
-     * @see #encoding
-     */
-    private static final Locale LOCALE = null;
 
     // ----------------------------------------------------------------------
     // Configurables
@@ -139,7 +136,7 @@ public abstract class AbstractCompilerMojo implements Mojo {
      * No warning is emitted in the latter case because as of Java 18, the default is UTF-8,
      * i.e. the encoding is no longer platform-dependent.
      */
-    private Charset charset() {
+    final Charset charset() {
         if (encoding != null) {
             try {
                 return Charset.forName(encoding);
@@ -183,14 +180,35 @@ public abstract class AbstractCompilerMojo implements Mojo {
     protected String target;
 
     /**
-     * The {@code --release} argument for the Java compiler.
-     * If omitted, then the compiler will generate bytecodes for the Java version running the compiler.
+     * The {@code --release} argument for the Java compiler when the sources do not declare this version.
+     * The suggested way to declare the target Java release is to specify it with the sources like below:
+     *
+     * <pre>{@code
+     * <build>
+     *   <sources>
+     *     <source>
+     *       <directory>src/main/java</directory>
+     *       <targetVersion>17</targetVersion>
+     *     </source>
+     *   </sources>
+     * </build>}</pre>
+     *
+     * If such {@code <targetVersion>} element is found, it has precedence over this {@code release} property.
+     * If a source does not declare a target Java version, then the value of this {@code release} property is
+     * used as a fallback.
+     * If omitted, the compiler will generate bytecodes for the Java version running the compiler.
      *
      * @see <a href="https://docs.oracle.com/en/java/javase/17/docs/specs/man/javac.html#option-release">javac --release</a>
      * @since 3.6
      */
     @Parameter(property = "maven.compiler.release")
     protected String release;
+
+    /**
+     * Whether {@link #target} or {@link #release} has a non-blank value.
+     * Used for logging a warning if no target Java version was specified.
+     */
+    private boolean targetOrReleaseSet;
 
     /**
      * Whether to enable preview language features of the java compiler.
@@ -201,6 +219,18 @@ public abstract class AbstractCompilerMojo implements Mojo {
      */
     @Parameter(property = "maven.compiler.enablePreview", defaultValue = "false")
     protected boolean enablePreview;
+
+    /**
+     * The root directories containing the source files to be compiled. If {@code null} or empty,
+     * the directories will be obtained from the {@code <Source>} elements declared in the project.
+     * If non-empty, the project {@code <Source>} elements are ignored. This configuration option
+     * should be used only when there is a need to override the project configuration.
+     *
+     * @deprecated Replaced by the project-wide {@code <sources>} element.
+     */
+    @Parameter
+    @Deprecated(since = "4.0.0")
+    protected List<String> compileSourceRoots;
 
     /**
      * Additional arguments to be passed verbatim to the Java compiler. This parameter can be used when
@@ -501,8 +531,8 @@ public abstract class AbstractCompilerMojo implements Mojo {
 
     /**
      * The algorithm to use for selecting which files to compile.
-     * Values can be {@code dependencies}, {@code sources}, {@code classes}, {@code additions},
-     * {@code modules} or {@code none}.
+     * Values can be {@code dependencies}, {@code sources}, {@code classes}, {@code rebuild-on-change},
+     * {@code rebuild-on-add}, {@code modules} or {@code none}.
      *
      * <p><b>{@code options}:</b>
      * recompile all source files if the compiler options changed.
@@ -527,18 +557,24 @@ public abstract class AbstractCompilerMojo implements Mojo {
      * <p>The {@code sources} and {@code classes} values are partially redundant,
      * doing the same work in different ways. It is usually not necessary to specify those two values.</p>
      *
-     * <p><b>{@code additions}:</b>
-     * recompile all source files when the addition of a new file is detected.
-     * This aspect should be used together with {@code sources} or {@code classes}.
-     * When used with {@code classes}, it provides a way to detect class renaming
-     * (this is not needed with {@code sources}).</p>
-     *
      * <p><b>{@code modules}:</b>
      * recompile modules and let the compiler decides which individual files to recompile.
      * The compiler plugin does not enumerate the source files to recompile (actually, it does not scan at all the
      * source directories). Instead, it only specifies the module to recompile using the {@code --module} option.
      * The Java compiler will scan the source directories itself and compile only those source files that are newer
      * than the corresponding files in the output directory.</p>
+     *
+     * <p><b>{@code rebuild-on-add}:</b>
+     * modifier for recompiling all source files when the addition of a new file is detected.
+     * This flag is effective only when used together with {@code sources} or {@code classes}.
+     * When used with {@code classes}, it provides a way to detect class renaming
+     * (this is not needed with {@code sources} for detecting renaming).</p>
+     *
+     * <p><b>{@code rebuild-on-change}:</b>
+     * modifier for recompiling all source files when a change is detected in at least one source file.
+     * This flag is effective only when used together with {@code sources} or {@code classes}.
+     * It does not rebuild when a new source file is added without change in other files,
+     * unless {@code rebuild-on-add} is also specified.</p>
      *
      * <p><b>{@code none}:</b>
      * the compiler plugin unconditionally specifies all sources to the Java compiler.
@@ -563,12 +599,31 @@ public abstract class AbstractCompilerMojo implements Mojo {
      * @since 3.1
      *
      * @deprecated Replaced by {@link #incrementalCompilation}.
-     * A value of {@code true} in this old property is equivalent to {@code "dependencies,sources,additions"}
+     * A value of {@code true} in this old property is equivalent to {@code "dependencies,sources,rebuild-on-add"}
      * in the new property, and a value of {@code false} is equivalent to {@code "classes"}.
      */
     @Deprecated(since = "4.0.0")
     @Parameter(property = "maven.compiler.useIncrementalCompilation")
     protected Boolean useIncrementalCompilation;
+
+    /**
+     * Returns the configuration of the incremental compilation.
+     * This method may be removed in a future version if the deprecated parameter is removed.
+     *
+     * @throws MojoException if a value is not recognized, or if mutually exclusive values are specified
+     */
+    final EnumSet<IncrementalBuild.Aspect> incrementalCompilationConfiguration() {
+        if (useIncrementalCompilation != null) {
+            return useIncrementalCompilation
+                    ? EnumSet.of(
+                            IncrementalBuild.Aspect.DEPENDENCIES,
+                            IncrementalBuild.Aspect.SOURCES,
+                            IncrementalBuild.Aspect.REBUILD_ON_ADD)
+                    : EnumSet.of(IncrementalBuild.Aspect.CLASSES);
+        } else {
+            return IncrementalBuild.Aspect.parse(incrementalCompilation);
+        }
+    }
 
     /**
      * File extensions to check timestamp for incremental build.
@@ -796,6 +851,9 @@ public abstract class AbstractCompilerMojo implements Mojo {
     /**
      * The logger for reporting information or warnings to the user.
      * Currently, this is also used for console output.
+     *
+     * <h4>Thread safety</h4>
+     * This logger should be thread-safe if the {@link ToolExecutor} is executed in a background thread.
      */
     @Inject
     protected Log logger;
@@ -817,25 +875,19 @@ public abstract class AbstractCompilerMojo implements Mojo {
     private String tipForCommandLineCompilation;
 
     /**
-     * {@code true} if this MOJO is for compiling tests, or {@code false} if compiling the main code.
+     * {@code MAIN_COMPILE} if this MOJO is for compiling the main code,
+     * or {@code TEST_COMPILE} if compiling the tests.
      */
-    final boolean isTestCompile;
+    final PathScope compileScope;
 
     /**
      * Creates a new MOJO.
      *
-     * @param isTestCompile {@code true} for compiling tests, or {@code false} for compiling the main code
+     * @param compileScope {@code MAIN_COMPILE} or {@code TEST_COMPILE}
      */
-    protected AbstractCompilerMojo(boolean isTestCompile) {
-        this.isTestCompile = isTestCompile;
+    protected AbstractCompilerMojo(PathScope compileScope) {
+        this.compileScope = compileScope;
     }
-
-    /**
-     * {@return the root directories of Java source files to compile}. If the sources are organized according the
-     * <i>Module Source Hierarchy</i>, then the list shall enumerate the root source directory for each module.
-     */
-    @Nonnull
-    protected abstract List<Path> getCompileSourceRoots();
 
     /**
      * {@return the inclusion filters for the compiler, or an empty list for all Java source files}.
@@ -858,6 +910,16 @@ public abstract class AbstractCompilerMojo implements Mojo {
      * @see SourceFile#ignoreModification
      */
     protected abstract Set<String> getIncrementalExcludes();
+
+    /**
+     * {@return whether all includes/excludes matchers specified in the plugin configuration are empty}.
+     * This method checks only the plugin configuration. It does not check the {@code <source>} elements.
+     */
+    final boolean hasNoFileMatchers() {
+        return getIncludes().isEmpty()
+                && getExcludes().isEmpty()
+                && getIncrementalExcludes().isEmpty();
+    }
 
     /**
      * {@return the destination directory (or class output directory) for class files}.
@@ -894,6 +956,33 @@ public abstract class AbstractCompilerMojo implements Mojo {
     }
 
     /**
+     * {@return the root directories of Java source code for the given scope}.
+     * This method ignores the deprecated {@link #compileSourceRoots} element.
+     *
+     * @param scope whether to get the directories for main code or for the test code
+     */
+    final Stream<SourceRoot> getSourceRoots(ProjectScope scope) {
+        return projectManager.getEnabledSourceRoots(project, scope, Language.JAVA_FAMILY);
+    }
+
+    /**
+     * {@return the root directories of the Java source files to compile, excluding empty directories}.
+     * The list needs to be modifiable for allowing the addition of generated source directories.
+     * This is determined from the {@link #compileSourceRoots} plugin configuration if non-empty,
+     * or from {@code <source>} elements otherwise.
+     *
+     * @param outputDirectory the directory where to store the compilation results
+     */
+    final List<SourceDirectory> getSourceDirectories(final Path outputDirectory) {
+        if (compileSourceRoots == null || compileSourceRoots.isEmpty()) {
+            Stream<SourceRoot> roots = getSourceRoots(compileScope.projectScope());
+            return SourceDirectory.fromProject(roots, getRelease(), outputDirectory);
+        } else {
+            return SourceDirectory.fromPluginConfiguration(compileSourceRoots, getRelease(), outputDirectory);
+        }
+    }
+
+    /**
      * {@return the path where to place generated source files created by annotation processing}.
      */
     @Nullable
@@ -904,6 +993,9 @@ public abstract class AbstractCompilerMojo implements Mojo {
      * Note that the sources may contain more than one {@code module-info.java} file
      * if compiling a project with Module Source Hierarchy.
      *
+     * <p>If the user explicitly specified a modular or classpath project, then the
+     * {@code module-info.java} is assumed to exist or not without verification.</p>
+     *
      * <p>The test compiler overrides this method for checking the existence of the
      * the {@code module-info.class} file in the main output directory instead.</p>
      *
@@ -911,53 +1003,20 @@ public abstract class AbstractCompilerMojo implements Mojo {
      * @throws IOException if this method needed to read a module descriptor and failed
      */
     boolean hasModuleDeclaration(final List<SourceDirectory> roots) throws IOException {
-        for (SourceDirectory root : roots) {
-            if (root.getModuleInfo().isPresent()) {
+        switch (project.getPackaging().type().id()) {
+            case Type.CLASSPATH_JAR:
+                return false;
+            case Type.MODULAR_JAR:
                 return true;
-            }
+            default:
+                for (SourceDirectory root : roots) {
+                    if (root.getModuleInfo().isPresent()) {
+                        return true;
+                    }
+                }
+                return false;
         }
-        return false;
     }
-
-    /**
-     * Adds dependencies others than the ones declared in POM file.
-     * The typical case is the compilation of tests, which depends on the main compilation outputs.
-     * The default implementation does nothing.
-     *
-     * @param addTo where to add dependencies
-     * @param hasModuleDeclaration whether the main sources have or should have a {@code module-info} file
-     * @throws IOException if this method needs to walk through directories and that operation failed
-     */
-    protected void addImplicitDependencies(Map<PathType, List<Path>> addTo, boolean hasModuleDeclaration)
-            throws IOException {
-        // Nothing to add in a standard build of main classes.
-    }
-
-    /**
-     * Adds options for declaring the source directories. The way to declare those directories depends on whether
-     * we are compiling the main classes (in which case the {@code --source-path} or {@code --module-source-path}
-     * options may be used) or the test classes (in which case the {@code --patch-module} option may be used).
-     *
-     * @param addTo the collection of source paths to augment
-     * @param compileSourceRoots the source paths to eventually adds to the {@code toAdd} map
-     * @throws IOException if this method needs to read a module descriptor and this operation failed
-     */
-    void addSourceDirectories(Map<PathType, List<Path>> addTo, List<SourceDirectory> compileSourceRoots)
-            throws IOException {
-        // No need to specify --source-path at this time, as it is for additional sources.
-    }
-
-    /**
-     * Generates options for handling the given dependencies.
-     * This method should do nothing when compiling the main classes, because the {@code module-info.java} file
-     * should contain all the required configuration. However, this method may need to add some {@code -add-reads}
-     * options when compiling the test classes.
-     *
-     * @param dependencies the project dependencies
-     * @param addTo where to add the options
-     * @throws IOException if the module information of a dependency cannot be read
-     */
-    protected void addModuleOptions(DependencyResolverResult dependencies, Options addTo) throws IOException {}
 
     /**
      * {@return the file where to dump the command-line when debug logging is enabled or when the compilation failed}.
@@ -983,16 +1042,25 @@ public abstract class AbstractCompilerMojo implements Mojo {
     }
 
     /**
-     * Runs the Java compiler.
+     * Runs the Java compiler. This method performs the following steps:
+     *
+     * <ol>
+     *   <li>Get a Java compiler by a call to {@link #compiler()}.</li>
+     *   <li>Get the options to give to the compiler by a call to {@link #parseParameters(OptionChecker)}.</li>
+     *   <li>Get an executor with {@link #createExecutor(DiagnosticListener)} with the default listener.</li>
+     *   <li>{@linkplain ToolExecutor#applyIncrementalBuild Apply the incremental build} if enabled.</li>
+     *   <li>{@linkplain ToolExecutor#compile Execute the compilation}.</li>
+     *   <li>Shows messages in the {@linkplain #logger}.</li>
+     * </ol>
      *
      * @throws MojoException if the compiler cannot be run
      */
     @Override
     public void execute() throws MojoException {
         JavaCompiler compiler = compiler();
-        Options compilerConfiguration = acceptParameters(compiler);
+        Options configuration = parseParameters(compiler);
         try {
-            compile(compiler, compilerConfiguration);
+            compile(compiler, configuration);
         } catch (RuntimeException e) {
             String message = e.getLocalizedMessage();
             if (message == null) {
@@ -1023,14 +1091,45 @@ public abstract class AbstractCompilerMojo implements Mojo {
     }
 
     /**
+     * Creates a new task by taking a snapshot of the current configuration of this <abbr>MOJO</abbr>.
+     * This method creates the {@linkplain ToolExecutor#outputDirectory output directory} if it does not already exist.
+     *
+     * <h4>Multi-threading</h4>
+     * This method and the returned objects are not thread-safe.
+     * However, this method takes a snapshot of the configuration of this <abbr>MOJO</abbr>.
+     * Changes in this <abbr>MOJO</abbr> after this method call will not affect the returned executor.
+     * Therefore, the executor can safely be executed in a background thread,
+     * provided that the {@link #logger} is thread-safe.
+     *
+     * @param listener where to send compilation warnings, or {@code null} for the Maven logger
+     * @throws MojoException if this method identifies an invalid parameter in this <abbr>MOJO</abbr>
+     * @return the task to execute for compiling the project using the configuration in this <abbr>MOJO</abbr>
+     * @throws IOException if an error occurred while creating the output directory or scanning the source directories
+     */
+    public ToolExecutor createExecutor(DiagnosticListener<? super JavaFileObject> listener) throws IOException {
+        var executor = new ToolExecutor(this, listener);
+        if (!(targetOrReleaseSet || executor.isReleaseSpecifiedForAll())) {
+            MessageBuilder mb = messageBuilderFactory
+                    .builder()
+                    .a("No explicit value set for --release or --target. "
+                            + "To ensure the same result in different environments, please add")
+                    .newline()
+                    .newline();
+            writePlugin(mb, "release", String.valueOf(Runtime.version().feature()));
+            logger.warn(mb.build());
+        }
+        return executor;
+    }
+
+    /**
      * {@return the compiler to use for compiling the code}.
-     * If {@link #fork} is {@code true}, the returned compiler will be a wrapper for the command line.
-     * Otherwise it will be the compiler identified by {@link #compilerId} if a value was supplied,
+     * If {@link #fork} is {@code true}, the returned compiler will be a wrapper for a command line.
+     * Otherwise, it will be the compiler identified by {@link #compilerId} if a value was supplied,
      * or the standard compiler provided with the Java platform otherwise.
      *
      * @throws MojoException if no compiler was found
      */
-    private JavaCompiler compiler() throws MojoException {
+    public JavaCompiler compiler() throws MojoException {
         /*
          * Use the `compilerId` as identifier for toolchains.
          * I.e, we assume that `compilerId` is also the name of the executable binary.
@@ -1082,12 +1181,14 @@ public abstract class AbstractCompilerMojo implements Mojo {
     }
 
     /**
-     * Parses the parameters declared in the MOJO.
+     * Parses the parameters declared in the <abbr>MOJO</abbr>.
+     * The {@link #release} parameter is excluded because it is handled in a special way
+     * in order to support the compilation of multi-version projects.
      *
      * @param  compiler  the tools to use for verifying the validity of options
      * @return the options after validation
      */
-    protected Options acceptParameters(final OptionChecker compiler) {
+    public Options parseParameters(final OptionChecker compiler) {
         /*
          * Options to provide to the compiler, excluding all kinds of path (source files, destination directory,
          * class-path, module-path, etc.). Some options are validated by Maven in addition of being validated by
@@ -1095,316 +1196,61 @@ public abstract class AbstractCompilerMojo implements Mojo {
          * For example, Maven will check for illegal values in the "-g" option only if the compiler rejected
          * the fully formatted option (e.g. "-g:vars,lines") that we provided to it.
          */
-        boolean targetOrReleaseSet;
-        final var compilerConfiguration = new Options(compiler, logger);
-        compilerConfiguration.addIfNonBlank("--source", getSource());
-        targetOrReleaseSet = compilerConfiguration.addIfNonBlank("--target", getTarget());
-        targetOrReleaseSet |= compilerConfiguration.addIfNonBlank("--release", getRelease());
-        if (!targetOrReleaseSet && !isTestCompile) {
-            MessageBuilder mb = messageBuilderFactory
-                    .builder()
-                    .a("No explicit value set for --release or --target. "
-                            + "To ensure the same result in different environments, please add")
-                    .newline()
-                    .newline();
-            writePlugin(mb, "release", String.valueOf(Runtime.version().feature()));
-            logger.warn(mb.build());
-        }
-        compilerConfiguration.addIfTrue("--enable-preview", enablePreview);
-        compilerConfiguration.addComaSeparated("-proc", proc, List.of("none", "only", "full"), null);
+        final var configuration = new Options(compiler, logger);
+        configuration.addIfNonBlank("--source", getSource());
+        targetOrReleaseSet = configuration.addIfNonBlank("--target", getTarget());
+        targetOrReleaseSet |= configuration.setRelease(getRelease());
+        configuration.addIfTrue("--enable-preview", enablePreview);
+        configuration.addComaSeparated("-proc", proc, List.of("none", "only", "full"), null);
         if (annotationProcessors != null) {
             var list = new StringJoiner(",");
             for (String p : annotationProcessors) {
                 list.add(p);
             }
-            compilerConfiguration.addIfNonBlank("-processor", list.toString());
+            configuration.addIfNonBlank("-processor", list.toString());
         }
-        compilerConfiguration.addComaSeparated("-implicit", implicit, List.of("none", "class"), null);
-        compilerConfiguration.addIfTrue("-parameters", parameters);
-        compilerConfiguration.addIfTrue("-Xpkginfo:always", createMissingPackageInfoClass);
+        configuration.addComaSeparated("-implicit", implicit, List.of("none", "class"), null);
+        configuration.addIfTrue("-parameters", parameters);
+        configuration.addIfTrue("-Xpkginfo:always", createMissingPackageInfoClass);
         if (debug) {
-            compilerConfiguration.addComaSeparated(
+            configuration.addComaSeparated(
                     "-g",
                     debuglevel,
                     List.of("lines", "vars", "source", "all", "none"),
                     (options) -> Arrays.asList(options).contains("all") ? new String[0] : options);
         } else {
-            compilerConfiguration.addIfTrue("-g:none", true);
+            configuration.addIfTrue("-g:none", true);
         }
-        compilerConfiguration.addIfNonBlank("--module-version", moduleVersion);
-        compilerConfiguration.addIfTrue("-deprecation", showDeprecation);
-        compilerConfiguration.addIfTrue("-nowarn", !showWarnings);
-        compilerConfiguration.addIfTrue("-Werror", failOnWarning);
-        compilerConfiguration.addIfTrue("-verbose", verbose);
+        configuration.addIfNonBlank("--module-version", moduleVersion);
+        configuration.addIfTrue("-deprecation", showDeprecation);
+        configuration.addIfTrue("-nowarn", !showWarnings);
+        configuration.addIfTrue("-Werror", failOnWarning);
+        configuration.addIfTrue("-verbose", verbose);
         if (fork) {
-            compilerConfiguration.addMemoryValue("-J-Xms", "meminitial", meminitial, SUPPORT_LEGACY);
-            compilerConfiguration.addMemoryValue("-J-Xmx", "maxmem", maxmem, SUPPORT_LEGACY);
+            configuration.addMemoryValue("-J-Xms", "meminitial", meminitial, SUPPORT_LEGACY);
+            configuration.addMemoryValue("-J-Xmx", "maxmem", maxmem, SUPPORT_LEGACY);
         }
-        return compilerConfiguration;
+        return configuration;
     }
 
     /**
-     * Subdivides a compilation unit into one or more compilation tasks. A compilation unit may, for example,
-     * compile the source files for a specific Java release in a multi-release project. Normally, such unit maps
-     * to exactly one compilation task. However, it is sometime useful to split a compilation unit into smaller tasks,
-     * usually as a workaround for deprecated practices such as overwriting the main {@code module-info} in the tests.
-     * In the latter case, we need to compile the test {@code module-info} separately, before the other test classes.
-     */
-    CompilationTaskSources[] toCompilationTasks(final SourcesForRelease unit) {
-        return new CompilationTaskSources[] {new CompilationTaskSources(unit.files)};
-    }
-
-    /**
-     * Runs the compiler.
+     * Runs the compiler, then shows the result in the Maven logger.
      *
      * @param compiler the compiler
-     * @param compilerConfiguration options to provide to the compiler
+     * @param configuration options to provide to the compiler
      * @throws IOException if an input file cannot be read
      * @throws MojoException if the compilation failed
      */
-    @SuppressWarnings({"checkstyle:MethodLength", "checkstyle:AvoidNestedBlocks"})
-    private void compile(final JavaCompiler compiler, final Options compilerConfiguration) throws IOException {
-        final EnumSet<IncrementalBuild.Aspect> incAspects;
-        if (useIncrementalCompilation != null) {
-            incAspects = useIncrementalCompilation
-                    ? EnumSet.of(
-                            IncrementalBuild.Aspect.SOURCES,
-                            IncrementalBuild.Aspect.ADDITIONS,
-                            IncrementalBuild.Aspect.DEPENDENCIES)
-                    : EnumSet.of(IncrementalBuild.Aspect.CLASSES);
-        } else {
-            incAspects = IncrementalBuild.Aspect.parse(incrementalCompilation);
+    private void compile(final JavaCompiler compiler, final Options configuration) throws IOException {
+        final ToolExecutor executor = createExecutor(null);
+        if (!executor.applyIncrementalBuild(this, configuration)) {
+            return;
         }
-        /*
-         * Get the root directories of the Java source files to compile, excluding empty directories.
-         * The list needs to be modifiable for allowing the addition of generated source directories.
-         * Then get the list of all source files to compile.
-         *
-         * Note that we perform this step after processing compiler arguments, because this block may
-         * skip the build if there is no source code to compile. We want arguments to be verified first
-         * in order to warn about possible configuration problems.
-         */
-        List<SourceFile> sourceFiles = List.of();
-        final Path outputDirectory = Files.createDirectories(getOutputDirectory());
-        final List<SourceDirectory> compileSourceRoots =
-                SourceDirectory.fromPaths(getCompileSourceRoots(), outputDirectory);
-        final boolean hasModuleDeclaration;
-        if (incAspects.contains(IncrementalBuild.Aspect.MODULES)) {
-            for (SourceDirectory root : compileSourceRoots) {
-                if (root.moduleName == null) {
-                    throw new CompilationFailureException("The <incrementalCompilation> value can be \"modules\" "
-                            + "only if all source directories are Java modules.");
-                }
-            }
-            if (!(getIncludes().isEmpty()
-                    && getExcludes().isEmpty()
-                    && getIncrementalExcludes().isEmpty())) {
-                throw new CompilationFailureException("Include and exclude filters cannot be specified "
-                        + "when <incrementalCompilation> is set to \"modules\".");
-            }
-            hasModuleDeclaration = true;
-        } else {
-            var filter = new PathFilter(getIncludes(), getExcludes(), getIncrementalExcludes());
-            sourceFiles = filter.walkSourceFiles(compileSourceRoots);
-            if (sourceFiles.isEmpty()) {
-                String message = "No sources to compile.";
-                try {
-                    Files.delete(outputDirectory);
-                } catch (DirectoryNotEmptyException e) {
-                    message += " However, the output directory is not empty.";
-                }
-                logger.info(message);
-                return;
-            }
-            switch (project.getPackaging().type().id()) {
-                case Type.CLASSPATH_JAR:
-                    hasModuleDeclaration = false;
-                    break;
-                case Type.MODULAR_JAR:
-                    hasModuleDeclaration = true;
-                    break;
-                default:
-                    hasModuleDeclaration = hasModuleDeclaration(compileSourceRoots);
-                    break;
-            }
-        }
-        final Set<Path> generatedSourceDirectories = addGeneratedSourceDirectory(getGeneratedSourcesDirectory());
-        /*
-         * Get the dependencies. If the module-path contains any file-based dependency
-         * and this MOJO is compiling the main code, then a warning will be logged.
-         *
-         * NOTE: this method assumes that the map and the list values are modifiable.
-         * This is true with org.apache.maven.internal.impl.DefaultDependencyResolverResult,
-         * but may not be true in the general case. To be safe, we should perform a deep copy.
-         * But it would be unnecessary copies in most cases.
-         */
-        final Map<PathType, List<Path>> dependencies = resolveDependencies(compilerConfiguration, hasModuleDeclaration);
-        resolveProcessorPathEntries(dependencies);
-        addImplicitDependencies(dependencies, hasModuleDeclaration);
-        /*
-         * Verify if a dependency changed since the build started, or if a source file changed since the last build.
-         * If there is no change, we can skip the build. If a dependency or the source tree has changed, we may
-         * conservatively clean before rebuild.
-         */
-        { // For reducing the scope of the Boolean flags.
-            final boolean checkSources = incAspects.contains(IncrementalBuild.Aspect.SOURCES);
-            final boolean checkClasses = incAspects.contains(IncrementalBuild.Aspect.CLASSES);
-            final boolean checkDepends = incAspects.contains(IncrementalBuild.Aspect.DEPENDENCIES);
-            final boolean checkOptions = incAspects.contains(IncrementalBuild.Aspect.OPTIONS);
-            final boolean rebuildOnAdd = incAspects.contains(IncrementalBuild.Aspect.ADDITIONS);
-            if (checkSources | checkClasses | checkDepends | checkOptions) {
-                final var incrementalBuild = new IncrementalBuild(this, sourceFiles);
-                String causeOfRebuild = null;
-                if (checkSources) {
-                    // Should be first, because this method deletes output files of removed sources.
-                    causeOfRebuild = incrementalBuild.inputFileTreeChanges(staleMillis, rebuildOnAdd);
-                }
-                if (checkClasses && causeOfRebuild == null) {
-                    causeOfRebuild = incrementalBuild.markNewOrModifiedSources(staleMillis, rebuildOnAdd);
-                }
-                if (checkDepends && causeOfRebuild == null) {
-                    if (fileExtensions == null || fileExtensions.isEmpty()) {
-                        fileExtensions = List.of("class", "jar");
-                    }
-                    causeOfRebuild = incrementalBuild.dependencyChanges(dependencies.values(), fileExtensions);
-                }
-                int optionsHash = 0; // Hash code collision may happen, this is a "best effort" only.
-                if (checkOptions) {
-                    optionsHash = compilerConfiguration.options.hashCode();
-                    if (causeOfRebuild == null) {
-                        causeOfRebuild = incrementalBuild.optionChanges(optionsHash);
-                    }
-                }
-                if (causeOfRebuild != null) {
-                    logger.info(causeOfRebuild);
-                } else {
-                    sourceFiles = incrementalBuild.getModifiedSources();
-                    if (IncrementalBuild.isEmptyOrIgnorable(sourceFiles)) {
-                        logger.info("Nothing to compile - all classes are up to date.");
-                        return;
-                    }
-                }
-                if (checkSources | checkDepends | checkOptions) {
-                    incrementalBuild.writeCache(optionsHash, checkSources);
-                }
-            }
-        }
-        if (logger.isDebugEnabled()) {
-            int n = sourceFiles.size();
-            @SuppressWarnings("checkstyle:MagicNumber")
-            final var sb =
-                    new StringBuilder(n * 40).append("Compiling ").append(n).append(" source files:");
-            for (SourceFile file : sourceFiles) {
-                sb.append(System.lineSeparator()).append("    ").append(file);
-            }
-            logger.debug(sb);
-        }
-        /*
-         * If we are compiling the test classes of a modular project, add the `--patch-modules` options.
-         * Note that those options are handled like dependencies, because they will need to be set using
-         * the `javax.tools.StandardLocation` API.
-         */
-        if (hasModuleDeclaration) {
-            addSourceDirectories(dependencies, compileSourceRoots);
-        }
-        /*
-         * Create a `JavaFileManager`, configure all paths (dependencies and sources), then run the compiler.
-         * The Java file manager has a cache, so it needs to be disposed after the compilation is completed.
-         * The same `JavaFileManager` may be reused for many compilation units (e.g. multi-releases) before
-         * disposal in order to reuse its cache.
-         */
-        boolean success = true;
         Exception failureCause = null;
-        final var unresolvedPaths = new ArrayList<Path>();
         final var compilerOutput = new StringWriter();
-        final var listener = new DiagnosticLogger(logger, messageBuilderFactory, LOCALE);
-        try (StandardJavaFileManager fileManager = compiler.getStandardFileManager(listener, LOCALE, charset())) {
-            /*
-             * Dispatch all dependencies on the kind of paths determined by `DependencyResolver`:
-             * class-path, module-path, annotation processor class-path/module-path, etc.
-             * This configuration will be unchanged for all compilation units.
-             */
-            List<String> patchedOptions = compilerConfiguration.options; // Workaround for JDK-TBD.
-            for (Map.Entry<PathType, List<Path>> entry : dependencies.entrySet()) {
-                List<Path> paths = entry.getValue();
-                PathType key = entry.getKey(); // TODO: replace by pattern matching in Java 21.
-                if (key instanceof JavaPathType type) {
-                    Optional<JavaFileManager.Location> location = type.location();
-                    if (location.isPresent()) { // Cannot use `Optional.ifPresent(…)` because of checked IOException.
-                        fileManager.setLocationFromPaths(location.get(), paths);
-                        continue;
-                    }
-                } else if (key instanceof JavaPathType.Modular type) {
-                    Optional<JavaFileManager.Location> location = type.rawType().location();
-                    if (location.isPresent()) {
-                        try {
-                            fileManager.setLocationForModule(location.get(), type.moduleName(), paths);
-                        } catch (UnsupportedOperationException e) { // Workaround forJDK-TBD.
-                            if (patchedOptions == compilerConfiguration.options) {
-                                patchedOptions = new ArrayList<>(patchedOptions);
-                            }
-                            patchedOptions.addAll(Arrays.asList(type.option(paths)));
-                        }
-                        continue;
-                    }
-                }
-                unresolvedPaths.addAll(paths);
-            }
-            if (!unresolvedPaths.isEmpty()) {
-                var sb = new StringBuilder("Cannot determine where to place the following artifacts:");
-                for (Path p : unresolvedPaths) {
-                    sb.append(System.lineSeparator()).append(" - ").append(p);
-                }
-                logger.warn(sb);
-            }
-            /*
-             * Configure all paths to source files. Each compilation unit has its own set of source.
-             * More than one compilation unit may exist in the case of a multi-releases project.
-             * Units are compiled in the order of the release version, with base compiled first.
-             */
-            if (!generatedSourceDirectories.isEmpty()) {
-                fileManager.setLocationFromPaths(StandardLocation.SOURCE_OUTPUT, generatedSourceDirectories);
-            }
-            compile:
-            for (SourcesForRelease unit : SourcesForRelease.groupByReleaseAndModule(sourceFiles)) {
-                for (Map.Entry<String, Set<Path>> root : unit.roots.entrySet()) {
-                    String moduleName = root.getKey();
-                    if (moduleName.isBlank()) {
-                        fileManager.setLocationFromPaths(StandardLocation.SOURCE_PATH, root.getValue());
-                    } else {
-                        fileManager.setLocationForModule(
-                                StandardLocation.MODULE_SOURCE_PATH, moduleName, root.getValue());
-                    }
-                }
-                /*
-                 * TODO: for all compilations after the base one, add the base to class-path or module-path.
-                 * TODO: prepend META-INF/version/## to output directory if needed.
-                 */
-                fileManager.setLocationFromPaths(StandardLocation.CLASS_OUTPUT, Set.of(outputDirectory));
-                /*
-                 * Compile the source files now. The following loop should be executed exactly once.
-                 * It may be executed twice when compiling test classes overwriting the `module-info`,
-                 * in which case the `module-info` needs to be compiled separately from other classes.
-                 * However, this is a deprecated practice.
-                 */
-                JavaCompiler.CompilationTask task;
-                for (CompilationTaskSources c : toCompilationTasks(unit)) {
-                    Iterable<? extends JavaFileObject> sources = fileManager.getJavaFileObjectsFromPaths(c.files);
-                    task = compiler.getTask(compilerOutput, fileManager, listener, patchedOptions, null, sources);
-                    patchedOptions = compilerConfiguration.options; // Patched options shall be used only once.
-                    success = c.compile(task);
-                    if (!success) {
-                        break compile;
-                    }
-                }
-            }
-            /*
-             * Post-compilation.
-             */
-            listener.logSummary();
-        } catch (UncheckedIOException e) {
-            success = false;
-            failureCause = e.getCause();
+        boolean success;
+        try {
+            success = executor.compile(compiler, configuration, compilerOutput);
         } catch (Exception e) {
             success = false;
             failureCause = e;
@@ -1434,10 +1280,10 @@ public abstract class AbstractCompilerMojo implements Mojo {
          * In case of failure, or if debugging is enabled, dump the options to a file.
          * By default, the file will have the ".args" extension.
          */
-        if (!success || logger.isDebugEnabled()) {
+        if (!success || verbose || logger.isDebugEnabled()) {
             IOException suppressed = null;
             try {
-                writeDebugFile(compilerConfiguration.options, dependencies, sourceFiles);
+                writeDebugFile(executor, configuration);
                 if (success && tipForCommandLineCompilation != null) {
                     logger.debug(tipForCommandLineCompilation);
                     tipForCommandLineCompilation = null;
@@ -1450,11 +1296,13 @@ public abstract class AbstractCompilerMojo implements Mojo {
                         .append("Cannot compile ")
                         .append(project.getId())
                         .append(' ')
-                        .append(isTestCompile ? "test" : "main")
+                        .append(compileScope.projectScope().id())
                         .append(" classes.");
-                listener.firstError(failureCause).ifPresent((c) -> message.append(System.lineSeparator())
-                        .append("The first error is: ")
-                        .append(c));
+                if (executor.listener instanceof DiagnosticLogger diagnostic) {
+                    diagnostic.firstError(failureCause).ifPresent((c) -> message.append(System.lineSeparator())
+                            .append("The first error is: ")
+                            .append(c));
+                }
                 var failure = new CompilationFailureException(message.toString(), failureCause);
                 if (suppressed != null) {
                     failure.addSuppressed(suppressed);
@@ -1471,16 +1319,12 @@ public abstract class AbstractCompilerMojo implements Mojo {
          * has been removed because Reproducible Build are enabled by default in Maven now.
          */
         if (!isVersionEqualOrNewer(compiler, "RELEASE_22")) {
-            Path moduleDescriptor = getOutputDirectory().resolve(MODULE_INFO + CLASS_FILE_SUFFIX);
+            Path moduleDescriptor = executor.outputDirectory.resolve(MODULE_INFO + CLASS_FILE_SUFFIX);
             if (Files.isRegularFile(moduleDescriptor)) {
-                try {
-                    byte[] oridinal = Files.readAllBytes(moduleDescriptor);
-                    byte[] modified = ByteCodeTransformer.patchJdkModuleVersion(oridinal, getRelease(), logger);
-                    if (modified != null) {
-                        Files.write(moduleDescriptor, modified);
-                    }
-                } catch (IOException ex) {
-                    throw new MojoException("Error reading or writing " + MODULE_INFO + CLASS_FILE_SUFFIX, ex);
+                byte[] oridinal = Files.readAllBytes(moduleDescriptor);
+                byte[] modified = ByteCodeTransformer.patchJdkModuleVersion(oridinal, getRelease(), logger);
+                if (modified != null) {
+                    Files.write(moduleDescriptor, modified);
                 }
             }
         }
@@ -1550,17 +1394,15 @@ public abstract class AbstractCompilerMojo implements Mojo {
     }
 
     /**
-     * {@return all dependencies organized by the path types where to place them}. If the module-path contains
-     * any file-based dependency and this MOJO is compiling the main code, then a warning will be logged.
+     * {@return all dependencies grouped by the path types where to place them}. If the module-path contains
+     * any filename-based dependency and this MOJO is compiling the main code, then a warning will be logged.
      *
-     * @param compilerConfiguration where to add {@code --add-reads} options when compiling test classes
      * @param hasModuleDeclaration whether to allow placement of dependencies on the module-path.
      */
-    private Map<PathType, List<Path>> resolveDependencies(Options compilerConfiguration, boolean hasModuleDeclaration)
-            throws IOException {
+    final DependencyResolverResult resolveDependencies(boolean hasModuleDeclaration) throws IOException {
         DependencyResolver resolver = session.getService(DependencyResolver.class);
         if (resolver == null) { // Null value happen during tests, depending on the mock used.
-            return new LinkedHashMap<>(); // The caller needs a modifiable map.
+            return null;
         }
         var allowedTypes = EnumSet.of(JavaPathType.CLASSES, JavaPathType.PROCESSOR_CLASSES);
         if (hasModuleDeclaration) {
@@ -1571,7 +1413,7 @@ public abstract class AbstractCompilerMojo implements Mojo {
                 .session(session)
                 .project(project)
                 .requestType(DependencyResolverRequest.RequestType.RESOLVE)
-                .pathScope(isTestCompile ? PathScope.TEST_COMPILE : PathScope.MAIN_COMPILE)
+                .pathScope(compileScope)
                 .pathTypeFilter(allowedTypes)
                 .build());
         /*
@@ -1597,21 +1439,13 @@ public abstract class AbstractCompilerMojo implements Mojo {
                 throw (RuntimeException) exception; // A ClassCastException here would be a bug in above loop.
             }
         }
-        if (!isTestCompile) {
+        if (ProjectScope.MAIN.equals(compileScope.projectScope())) {
             String warning = dependencies.warningForFilenameBasedAutomodules().orElse(null);
             if (warning != null) { // Do not use Optional.ifPresent(…) for avoiding confusing source class name.
                 logger.warn(warning);
             }
         }
-        /*
-         * Add `--add-reads` options when compiling the test classes.
-         * Nothing should be changed when compiling the main classes.
-         */
-        if (hasModuleDeclaration) {
-            addModuleOptions(dependencies, compilerConfiguration);
-        }
-        // TODO: to be safe, we should perform a deep clone here.
-        return dependencies.getDispatchedPaths();
+        return dependencies;
     }
 
     /**
@@ -1619,7 +1453,7 @@ public abstract class AbstractCompilerMojo implements Mojo {
      * to the {@link JavaPathType#PROCESSOR_CLASSES} entry of given map, which should be modifiable.
      *
      * <h4>Implementation note</h4>
-     * We rely on the fact that {@link org.apache.maven.internal.impl.DefaultDependencyResolverResult} creates
+     * We rely on the fact that {@link org.apache.maven.impl.DefaultDependencyResolverResult} creates
      * modifiable instances of map and lists. This is a fragile assumption, but this method is deprecated anyway
      * and may be removed in a future version.
      *
@@ -1630,7 +1464,7 @@ public abstract class AbstractCompilerMojo implements Mojo {
      * set to {@code proc}, {@code classpath-proc} or {@code modular-proc}.
      */
     @Deprecated(since = "4.0.0")
-    private void resolveProcessorPathEntries(Map<PathType, List<Path>> addTo) throws MojoException {
+    final void resolveProcessorPathEntries(Map<PathType, List<Path>> addTo) throws MojoException {
         List<DependencyCoordinate> dependencies = annotationProcessorPaths;
         if (dependencies != null && !dependencies.isEmpty()) {
             try {
@@ -1667,13 +1501,13 @@ public abstract class AbstractCompilerMojo implements Mojo {
     /**
      * Ensures that the directory for generated sources exists, and adds it to the list of source directories
      * known to the project manager. This is used for adding the output of annotation processor.
-     * The given directory should be the result of {@link #getGeneratedSourcesDirectory()}.
+     * The returned set is either empty or a singleton.
      *
-     * @param generatedSourcesDirectory the directory to add, or {@code null} if none
      * @return the added directory in a singleton set, or an empty set if none
      * @throws IOException if the directory cannot be created
      */
-    private Set<Path> addGeneratedSourceDirectory(Path generatedSourcesDirectory) throws IOException {
+    final Set<Path> addGeneratedSourceDirectory() throws IOException {
+        Path generatedSourcesDirectory = getGeneratedSourcesDirectory();
         if (generatedSourcesDirectory == null) {
             return Set.of();
         }
@@ -1690,17 +1524,19 @@ public abstract class AbstractCompilerMojo implements Mojo {
             // `createDirectories(Path)` does nothing if the directory already exists.
             generatedSourcesDirectory = Files.createDirectories(generatedSourcesDirectory);
         }
-        ProjectScope scope = isTestCompile ? ProjectScope.TEST : ProjectScope.MAIN;
-        projectManager.addCompileSourceRoot(project, scope, generatedSourcesDirectory.toAbsolutePath());
+        ProjectScope scope = compileScope.projectScope();
+        projectManager.addSourceRoot(project, scope, Language.JAVA_FAMILY, generatedSourcesDirectory.toAbsolutePath());
         if (logger.isDebugEnabled()) {
             var sb = new StringBuilder("Adding \"")
                     .append(generatedSourcesDirectory)
                     .append("\" to ")
                     .append(scope.id())
                     .append("-compile source roots. New roots are:");
-            for (Path p : projectManager.getCompileSourceRoots(project, scope)) {
-                sb.append(System.lineSeparator()).append("    ").append(p);
-            }
+            projectManager
+                    .getEnabledSourceRoots(project, scope, Language.JAVA_FAMILY)
+                    .forEach((p) -> {
+                        sb.append(System.lineSeparator()).append("    ").append(p.directory());
+                    });
             logger.debug(sb.toString());
         }
         return Set.of(generatedSourcesDirectory);
@@ -1751,14 +1587,11 @@ public abstract class AbstractCompilerMojo implements Mojo {
      * If a file name contains embedded spaces, then the whole file name must be between double quotation marks.
      * The -J options are not supported.
      *
-     * @param options the compiler options
-     * @param dependencies the dependencies
-     * @param sourceFiles all files to compile
+     * @param executor the executor that compiled the classes
+     * @param configuration options provided to the compiler
      * @throws IOException if an error occurred while writing the debug file
      */
-    private void writeDebugFile(
-            List<String> options, Map<PathType, List<Path>> dependencies, List<SourceFile> sourceFiles)
-            throws IOException {
+    private void writeDebugFile(final ToolExecutor executor, final Options configuration) throws IOException {
         final Path path = getDebugFilePath();
         if (path == null) {
             logger.warn("The <debugFileName> parameter should not be empty.");
@@ -1768,39 +1601,13 @@ public abstract class AbstractCompilerMojo implements Mojo {
                 .append(System.lineSeparator())
                 .append("    ")
                 .append(executable != null ? executable : compilerId);
-        boolean hasOptions = false;
         try (BufferedWriter out = Files.newBufferedWriter(path)) {
-            for (String option : options) {
-                if (option.isBlank()) {
-                    continue;
-                }
-                if (option.startsWith("-J")) {
-                    commandLine.append(' ').append(option);
-                    continue;
-                }
-                if (hasOptions) {
-                    if (option.charAt(0) == '-') {
-                        out.newLine();
-                    } else {
-                        out.write(' ');
-                    }
-                }
-                boolean needsQuote = option.indexOf(' ') >= 0;
-                if (needsQuote) {
-                    out.write('"');
-                }
-                out.write(option);
-                if (needsQuote) {
-                    out.write('"');
-                }
-                hasOptions = true;
-            }
-            if (hasOptions) {
-                out.newLine();
-            }
-            for (Map.Entry<PathType, List<Path>> entry : dependencies.entrySet()) {
+            configuration.format(commandLine, out);
+            for (Map.Entry<PathType, List<Path>> entry : executor.dependencies.entrySet()) {
+                List<Path> files = entry.getValue();
+                files = files.stream().map(this::relativize).toList();
                 String separator = "";
-                for (String element : entry.getKey().option(entry.getValue())) {
+                for (String element : entry.getKey().option(files)) {
                     out.write(separator);
                     out.write(element);
                     separator = " ";
@@ -1808,16 +1615,45 @@ public abstract class AbstractCompilerMojo implements Mojo {
                 out.newLine();
             }
             out.write("-d \"");
-            out.write(getOutputDirectory().toString());
+            out.write(relativize(getOutputDirectory()).toString());
             out.write('"');
             out.newLine();
-            for (SourceFile sf : sourceFiles) {
-                out.write('"');
-                out.write(sf.file.toString());
-                out.write('"');
-                out.newLine();
+            try {
+                executor.getSourceFiles().forEach((file) -> {
+                    try {
+                        out.write('"');
+                        out.write(relativize(file).toString());
+                        out.write('"');
+                        out.newLine();
+                    } catch (IOException e) {
+                        throw new UncheckedIOException(e);
+                    }
+                });
+            } catch (UncheckedIOException e) {
+                throw e.getCause();
             }
         }
-        tipForCommandLineCompilation = commandLine.append(" @").append(path).toString();
+        tipForCommandLineCompilation =
+                commandLine.append(" @").append(relativize(path)).toString();
+    }
+
+    /**
+     * Makes the given file relative to the base directory if the path is inside the project directory tree.
+     * The check for the project directory tree (starting from the root of all sub-projects) is for avoiding
+     * to relativize the paths to JAR files in the Maven local repository for example.
+     *
+     * @param  file  the path to make relative to the base directory
+     * @return the given path, potentially relative to the base directory
+     */
+    private Path relativize(Path file) {
+        Path root = project.getRootDirectory();
+        if (root != null && file.startsWith(root)) {
+            try {
+                file = basedir.relativize(file);
+            } catch (IllegalArgumentException e) {
+                // Ignore, keep the absolute path.
+            }
+        }
+        return file;
     }
 }
